# simple_python_project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Copilot.md  Makefile  README.md  RELEASE.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-macos.yml  ci.yml  create-release.yml  finalize-release.yml  release.yml  semantic-release.yml
simple_python_project/: .gitignore  Copilot.md  README.md  pyproject.toml
simple_python_project/src/simple_calc/: __init__.py  cli.py
simple_python_project/src/simple_calc.egg-info/: entry_points.txt  requires.txt
simple_python_project/tests/: test_calculator.py
src/simple_calc/: __init__.py  calculator.py  cli.py
src/simple_calc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_calculator.py  test_cli.py
